[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/debug/DebugArrow.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/P1/meshes/Model.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/P1/P1.gd" type="Script" id=3]
[ext_resource path="res://game/P1/States/AgainstPushable.gd" type="Script" id=4]
[ext_resource path="res://game/P1/States/NormalMovement.gd" type="Script" id=5]
[ext_resource path="res://game/P1/States/Empty.gd" type="Script" id=7]

[sub_resource type="SphereShape" id=1]
margin = 0.001

[sub_resource type="SphereShape" id=2]
radius = 0.945976

[node name="P1" type="KinematicBody"]
script = ExtResource( 3 )

[node name="Lifter" type="CollisionShape" parent="."]
transform = Transform( 0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.5, -0.00902224, 0.745916, 0.00126863 )
shape = SubResource( 1 )

[node name="FloorTolerance" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, -0.45, 0 )

[node name="FloorDistanceDetector" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
enabled = true
cast_to = Vector3( 0, -25.5, 0 )

[node name="Bumper" type="CollisionShape" parent="."]
transform = Transform( 0.6, 0, 0, 0, 1.2, 0, 0, 0, 0.6, 0, 2.16077, 0 )
shape = SubResource( 2 )

[node name="ModelGimbal" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0 )

[node name="Model" parent="ModelGimbal" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.7, 0 )

[node name="DebugGizmo" type="Spatial" parent="."]

[node name="InertiaController" type="Spatial" parent="DebugGizmo"]

[node name="Arrow" parent="DebugGizmo/InertiaController" instance=ExtResource( 1 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.6, -1.2 )

[node name="DirectionalController" type="Spatial" parent="DebugGizmo"]

[node name="Arrow" parent="DebugGizmo/DirectionalController" instance=ExtResource( 1 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.3, -1.2 )

[node name="States" type="Node" parent="."]

[node name="AgainstPushable" type="Node" parent="States"]
script = ExtResource( 4 )

[node name="NormalMovement" type="Node" parent="States"]
script = ExtResource( 5 )

[node name="Empty" type="Node" parent="States"]
script = ExtResource( 7 )
